[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.11",
    "openai>=1.61.1",
    "pytrends>=4.9.2",
    "streamlit>=1.42.0",
    "textblob>=0.19.0",
    "trafilatura>=2.0.0",
    "twilio>=9.4.5",
]
